--- a/roles/frontend/files/tasks/main.yaml
+++ b/roles/frontend/files/tasks/main.yaml
@@ -2,12 +2,35 @@
   ansible.builtin.shell: dnf module disable nginx -y
 
 - name: Enable Nginx
-  ansible.builtin.shell: dnf module install nginx:1.24 -y
+  ansible.builtin.shell: dnf module enable nginx:1.24 -y
+
 - name: Install Nginx
   ansible.builtin.dnf:
     name: nginx
     state: present
-- name: start service
+
+- name: Copy Nginx config file
+  ansible.builtin.copy:
+    src: nginx.conf
+    dest: /etc/nginx/nginx.conf
+
+- name: Remove old folder
+  ansible.builtin.file:
+  path: /usr/share/nginx/html
+  state: absent
+
+- name: Create old folder
+  ansible.builtin.file:
+  path: /usr/share/nginx/html
+  state: directory  
+
+- name: Download and Extract
+  ansible.builtin.unarchive:
+  src: https://roboshop-artifacts.s3.amazonaws.com/frontend-v3.zip
+  dest: /usr/share/nginx/html
+  remote_src: yes
+
+- name: Start service
   ansible.builtin.systemd:
     name: nginx
-    state: started  
+    state: restarted    
