added few components

--- a/roles/frontend/files/tasks/main.yaml
+++ b/roles/frontend/files/tasks/main.yaml
@@ -7,7 +7,7 @@
 - name: Install Nginx
   ansible.builtin.dnf:
     name: nginx
-    state: present
+    state: installed
 
 - name: Copy Nginx config file
   ansible.builtin.copy:
