--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -26,7 +26,7 @@
     dest: /etc/yum.repos.d/mongo.repo
 
 - name : Install MongoDB
-  ansible.buitin.dnf:
+  ansible.builtin.dnf:
     name: mongodb-mongosh
     state: installed 
 
