--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -31,7 +31,7 @@
     remote_src: yes
 
 - name: Start service
-  ansible.builtin.systemd:
+  ansible.builtin.systemd_service:
     name: nginx
     state: restarted    
     enabled: yes
