--- a/roles/dispatch/tasks/main.yml
+++ b/roles/dispatch/tasks/main.yml
@@ -38,7 +38,9 @@
 
 - name: Build the App
   ansible.builtin.shell: go mod init dispatch ; go get ; go build   
-
+  args:
+    chdir: /app
+    
 - name : Include systemd_setup
   ansible.builtin.include_tasks:
     file: systemd_setup.yml  
