--- a/roles/shipping/tasks/main.yml
+++ b/roles/shipping/tasks/main.yml
@@ -9,7 +9,7 @@
 
 # for file in schema app-user master-data; do 
 #     print_head Load $file
-#     mysql -h mysql-dev.santoshpawar.site -uroot -pRoboShop@1 < /app/db/$file.sql  &>>$log_file
+#     mysql -h mysql-{{ env }}.santoshpawar.site -uroot -pRoboShop@1 < /app/db/$file.sql  &>>$log_file
 # done
 
 - name : Load Maven
@@ -23,8 +23,8 @@
     state: installed
 
 - name : Load Schema
-  ansible.builtin.shell: mysql -h mysql-dev.santoshpawar.site -uroot -pRoboShop@1 < /app/db/schema.sql
+  ansible.builtin.shell: mysql -h mysql-{{ env }}.santoshpawar.site -uroot -pRoboShop@1 < /app/db/schema.sql
 - name : Load User Creation
-  ansible.builtin.shell: mysql -h mysql-dev.santoshpawar.site -uroot -pRoboShop@1 < /app/db/app-user.sql
+  ansible.builtin.shell: mysql -h mysql-{{ env }}.santoshpawar.site -uroot -pRoboShop@1 < /app/db/app-user.sql
 - name : Load Master data
-  ansible.builtin.shell: mysql -h mysql-dev.santoshpawar.site -uroot -pRoboShop@1 < /app/db/master-data.sql
+  ansible.builtin.shell: mysql -h mysql-{{ env }}.santoshpawar.site -uroot -pRoboShop@1 < /app/db/master-data.sql
