--- a/roles/frontend/templates/nginx.conf
+++ b/roles/frontend/templates/nginx.conf
@@ -51,7 +51,7 @@ http {
         location /api/user/ { proxy_pass http://user-{{ env }}.santoshpawar.site:8080/; }
         location /api/cart/ { proxy_pass http://cart-{{ env }}.santoshpawar.site:8080/; }
         location /api/shipping/ { proxy_pass http://shipping-{{ env }}.santoshpawar.site:8080/; }
-        location /api/payment/ { proxy_pass http://payment-{{ env }}.santoshpawar.site:8080/; }
+#       location /api/payment/ { proxy_pass http://payment-{{ env }}.santoshpawar.site:8080/; }
 
         location /health {
           stub_status on;
