--- a/roles/frontend/templates/nginx.conf
+++ b/roles/frontend/templates/nginx.conf
@@ -47,11 +47,15 @@ http {
           root   /usr/share/nginx/html;
           try_files $uri /images/placeholder.jpg;
         }
-        location /api/catalogue/ { proxy_pass http://catalogue-{{ env }}.santoshpawar.site:8080/; }
-        location /api/user/ { proxy_pass http://user-{{ env }}.santoshpawar.site:8080/; }
-        location /api/cart/ { proxy_pass http://cart-{{ env }}.santoshpawar.site:8080/; }
-        location /api/shipping/ { proxy_pass http://shipping-{{ env }}.santoshpawar.site:8080/; }
+        # location /api/catalogue/ { proxy_pass http://catalogue-{{ env }}.santoshpawar.site:8080/; }
+        # location /api/user/ { proxy_pass http://user-{{ env }}.santoshpawar.site:8080/; }
+        # location /api/cart/ { proxy_pass http://cart-{{ env }}.santoshpawar.site:8080/; }
+        # location /api/shipping/ { proxy_pass http://shipping-{{ env }}.santoshpawar.site:8080/; }
 #       location /api/payment/ { proxy_pass http://payment-{{ env }}.santoshpawar.site:8080/; }
+        {% for item in secrets|dict2items %}
+        location /api/{{ item.key }}/ { proxy_pass {{ item.value }}; }
+        {% endfor %}
+
 
         location /health {
           stub_status on;
