--- a/roles/payment-docker/tasks/main.yml
+++ b/roles/payment-docker/tasks/main.yml
@@ -9,7 +9,9 @@
 #     name: common
 #     tasks_from: nodejs
 
-- name : Load Docker
+- name: Load docker
   ansible.builtin.include_role:
     name: common
     tasks_from: docker
+  vars:
+    app_port: 8080
